@@ -1,6 +1,6 @@
 Package: R2jags
-Version: 0.01-16
-Date: 2009-2-23
+Version: 0.01-17
+Date: 2009-3-4
 Title: A Package for Running jags from R
 Author: Yu-Sung Su <ys463@columbia.edu>,
         Masanao Yajima <yajima@stat.columbia.edu>,
